# src/main/java/br/com/fiap/postech/doctor/app/resource/DoctorResource.java
@@ -5,6 +5,7 @@ import br.com.fiap.postech.doctor.app.service.DoctorService;
 import br.com.fiap.postech.doctor.model.DoctorDetailDTO;
 import br.com.fiap.postech.doctor.model.DoctorRequestDTO;
 import br.com.fiap.postech.doctor.model.DoctorResponseDTO;
+import br.com.fiap.postech.doctor.model.DoctorUpdateDTO;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -25,22 +26,23 @@ public class DoctorResource implements DoctorApiDelegate {
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<Void>> deleteDoctor(String id) {
-        return DoctorApiDelegate.super.deleteDoctor(id);
+    public CompletableFuture<ResponseEntity<Void>> deleteDoctor(Long id) {
+        doctorService.deleteDoctor(id);
+        return CompletableFuture.supplyAsync(() -> ResponseEntity.noContent().build());
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<DoctorDetailDTO>> getDoctorById(String id) {
-        return DoctorApiDelegate.super.getDoctorById(id);
+    public CompletableFuture<ResponseEntity<DoctorDetailDTO>> getDoctorById(Long id) {
+        return CompletableFuture.supplyAsync(() -> ResponseEntity.ok(doctorService.getDoctorById(id)));
     }
 
     @Override
     public CompletableFuture<ResponseEntity<List<DoctorResponseDTO>>> listDoctors() {
-        return DoctorApiDelegate.super.listDoctors();
+        return CompletableFuture.supplyAsync(() -> ResponseEntity.ok(doctorService.listDoctors()));
     }
 
     @Override
-    public CompletableFuture<ResponseEntity<DoctorDetailDTO>> updateDoctor(String id, DoctorRequestDTO doctorRequestDTO) {
-        return DoctorApiDelegate.super.updateDoctor(id, doctorRequestDTO);
+    public CompletableFuture<ResponseEntity<DoctorDetailDTO>> updateDoctor(Long id, @Valid DoctorUpdateDTO doctorUpdateDTO) {
+        return CompletableFuture.supplyAsync(() -> ResponseEntity.ok(doctorService.updateDoctor(id, doctorUpdateDTO)));
     }
 }
